# clemote

./: CMakeLists.txt  README.md  _clang-format  format-all.sh
assets/: label-buttons.py  label-rec.py
src/: alsa_volume.cpp  alsa_volume.h  clementine_dbus.cpp  clementine_dbus.h  event_code_to_str.cpp  event_code_to_str.h  main.cpp  pulse_audio.cpp  pulse_audio.h  tag.cpp  tag.h
